This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance.
============================================================================
12/1/19: SEM_3-7-11
12/1/19: Fixed use of wrong gain reference when aligning K3 frames taken with
fast binning in the SEMCCD plugin (In 3.7).

11/27/19: Fixed crash when trimming improperly oriented K2 image (In 3.7).

11/17/19: Added task for conditioning a phase plate.

11/17/19: Added script command for doing a linear least squares fit between
two or 3 array variables.

11/17/19: Added script commands for reporting and setting CDS mode for K3.
Added property to switch out of CDS mode for Refine ZLP.

11/15/19: Fixed drift settling when not reblanking after exposure during
high-quality stage montage (In 3.7).

11/13/19: Added ability to align and sum multiple continuous mode images with
the WaitForNextFrame command.

11/13/19: Added support for taking fast continuous mode images from Tietz
CMOS cameras.

11/13/19: Added special option to prevent blanking with screen up in Low Dose
mode.

11/13/19: Added property to use Trial set directly for image shift realign in
montaging, and ability to do IS realign on subset of pieces (provisionally
with property).

11/12/19: Changed default readout interval for Falcon 3 (In 3.7).

10/27/19: 3-8-0beta6
10/24/19: Prevented clipping of image shift on JEOL from screwing up beam
shift.

10/24/19: Added script command to set dose rate.

10/24/19: Restored AddToExposureTime, lost 9/18/19.

10/21/19: Fixed setting of default AddToExposureTime for Falcon (In 3.7).

10/20/19: Added script command to limit autoalignment shift distance.

10/20/19: Added property to suppress beam shift on image shift for Hitachi in
specified mag modes.

10/20/19: Allowed ISF to be used for IS in HR mode on Hitachi (In 3.7).

10/17/19: Added beam shift boundaries for JEOL and help section on alpha/beam